--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    width: 100vw;
+    background-color: #1D1D1D;
+    margin: 0;
+    font-family: helvetica;
+ }
+ 
